
[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang         = "0.32.1"
anchor-spl          = "0.32.1"
solana-program-test = "*"
solana-sdk          = "*"
test-case           = "3.3.1"
