[package]
name = "jam_settlement"
version = "0.1.0"
description = "Bebop JAM aggregation API — Solana settlement program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jam_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
anchor-debug = []
custom-panic = []
production = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true, features = ["token_2022"] }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk          = { workspace = true }
